# arxiv-scratcher

./: .gitignore  README.md  pyproject.toml
src/arxiv_scratcher/: APIKEY.py  __init__.py  __main__.py  constant.py  entity.py
