[project]
name = "arxiv-scratcher"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "psz", email = "2422158541@qq.com" }
]
dependencies = [
    "requests>=2.32.3",
    "bs4>=0.0.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"arxiv-scratcher" = "arxiv_scratcher:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/arxiv_scratcher"]
